--- a/day1/watchlist/static/css/index.css
+++ b/day1/watchlist/static/css/index.css
@@ -1,4 +1,35 @@
+
+body{
+    margin: 0 auto;
+    max-width: 600px;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 .avatar{
     width: 100px;
-    height: 100px;
+}
+footer{
+    color: #000;
+    margin-top: 20px;
+    text-align: center;
+    padding: 10px;
+}
+
+.movie-list{
+    list-style-type: none;
+    padding:0 ;
+    margin-bottom: 10px;
+    box-shadow: 0 2px 5px 0 reba(0,0,0,0.16),0 2px 10px 0 reba(0,0,0,0.14);
+}
+
+.movie-list li{
+    padding: 12px 24px;
+    border-bottom: 1px solid #dddddd;
+}
+
+
+
+
+.movie-list li:hover{
+    background-color:beige ;
 }
