--- a/day1/watchlist/templates/index.html
+++ b/day1/watchlist/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{name}}'father'</title>
+    <title>{{name.title}}'father'</title>
     <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
 </head>
 <body>
     
 <h2><img src="{{url_for('static',filename='img/lazar.jpg')}}" alt="头像" class="avatar">
-    {{name}}</h2>
+    {{name.name}}</h2>
 <p>总共{{movies|length}}个电影</p>
 
     <ul>
