--- a/day1/watchlist/templates/404.html
+++ b/day1/watchlist/templates/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{name.title}}'father'</title>
+    <title>{{name}}'father'</title>
     <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
 </head>
 <body>
@@ -14,7 +14,7 @@
     <ul>
         <li>
             页面走丢了404
-                <a href="{{url_for('index')}}"></a>
+                <a href="{{url_for('index1')}}"></a>
         </li>
     </ul>
     <footer>
