--- a/day1/watchlist/static/css/index.css
+++ b/day1/watchlist/static/css/index.css
@@ -19,7 +19,7 @@ footer{
     list-style-type: none;
     padding:0 ;
     margin-bottom: 10px;
-    box-shadow: 0 2px 5px 0 reba(0,0,0,0.16),0 2px 10px 0 reba(0,0,0,0.14);
+    box-shadow: 0 2px 5px 0 reba(0,0,0,0.16)0 2px 10px 0 reba(0,0,0,0.14);
 }
 
 .movie-list li{
@@ -27,9 +27,49 @@ footer{
     border-bottom: 1px solid #dddddd;
 }
 
-
+.float-right{
+    float: right;
+}
 
 
 .movie-list li:hover{
     background-color:beige ;
+}
+
+
+
+nav ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+}
+
+nav ul li{
+    float: left;
+}
+
+nav ul li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 8px 12px;
+    text-decoration: none;
+}
+nav li a:hover{
+    background-color: #111111;
+}
+.float-right{
+    float: right;
+}
+
+.baidu{
+    font-size: 12px;
+    font-weight: bold;
+    color:black;
+    text-decoration: none;
+    background: yellow;
+    border-radius: 5px;
+    padding: 3px 5px;
 }
