--- a/day1/watchlist/templates/index.html
+++ b/day1/watchlist/templates/index.html
@@ -1,26 +1,16 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{name.title}}'father'</title>
-    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
-</head>
-<body>
-    
-<h2><img src="{{url_for('static',filename='img/lazar.jpg')}}" alt="头像" class="avatar">
-    {{name.name}}</h2>
+{%extends 'bass.html'%}
+{%block content%}
+
 <p>总共{{movies|length}}个电影</p>
 
-    <ul>
+    <ul class ="movie-list">
         {%for movie in movies%}
         <li>
-                {{movie.title}}  {{movie.year}}
+                {{movie.title}} -{{movie.year}}
+                <span class="float-right">
+                    <a class="baidu" href="http://v.baidu.com/v?word={{movie.title}}&ct=301989888&rn=67&pn=0&db=0&s=0&fbl=800&ie=utf-8&oq={{movie.title}}&f=3&rsp=0" target="_blank">百度视频</a>
+                </span>
         </li>
         {%endfor%}
-    </ul>
-    <footer>
-        <small>&copy;2020   <a href="#">1903c</a></small>
-    </footer>
-</body>
-</html>
+    </ul>>
+{%endblock%}
