--- a/day1/watchlist/templates/index.html
+++ b/day1/watchlist/templates/index.html
@@ -2,7 +2,11 @@
 {%block content%}
 
 <p>总共{{movies|length}}个电影</p>
-
+<form action="" method="POST">
+    电影名称：<input type="text" name="title" required autocomplete="off">
+    电影年份：<input type="text" name ="year" required autocomplete="off">
+    <input type="submit" value="添加"  class=btn>
+</form>
     <ul class ="movie-list">
         {%for movie in movies%}
         <li>
