--- a/day1/watchlist/templates/bass.html
+++ b/day1/watchlist/templates/bass.html
@@ -23,6 +23,27 @@
             <a href="{{url_for('index1')}}">首页</a>
 
         </li>
+        {%if not current_user.is_authenticated %}
+        <li>
+            <a href="{{url_for('login')}}">登录</a>
+
+        </li>
+        {%else%}
+        <li>
+            <a href="#">{{current_user.name}}</a>
+
+        </li>
+        {%endif%}
+        {%if current_user.is_authenticated %}
+        <li>
+            <a href="{{url_for('logout')}}">注销</a>
+
+        </li>
+        <li>
+            <a href="{{url_for('settings')}}">设置</a>
+
+        </li>
+        {%endif%}
     </ul>
 </nav>
 {%block content%}
