--- a/day1/watchlist/templates/index.html
+++ b/day1/watchlist/templates/index.html
@@ -2,11 +2,13 @@
 {%block content%}
 
 <p>总共{{movies|length}}个电影</p>
+{%if current_user.is_authenticated %}
 <form action="" method="POST">
     电影名称：<input type="text" name="title" required autocomplete="off">
     电影年份：<input type="text" name ="year" required autocomplete="off">
     <input type="submit" value="添加"  class=btn>
 </form>
+{%endif%}
     <ul class ="movie-list">
         {%for movie in movies%}
         <li>
@@ -14,7 +16,17 @@
                 <span class="float-right">
                     <a class="baidu" href="http://v.baidu.com/v?word={{movie.title}}&ct=301989888&rn=67&pn=0&db=0&s=0&fbl=800&ie=utf-8&oq={{movie.title}}&f=3&rsp=0" target="_blank">百度视频</a>
                 </span>
+                {%if current_user.is_authenticated %}
+                <span class="float-right">
+                    <a class="baidu" href="{{ url_for('edit',movie_id=movie.id) }}" target="_blank">编辑</a>
+                </span>
+                <span class="float-right">
+                    <form action="{{ url_for('delete',movie_id=movie.id) }}" method="post">
+                        <input type="submit" class="btn" name="delete" value="删除" onclick="return confim('确认删除嘛')">
+                    </form>
+                </span>
+                {%endif%}
         </li>
         {%endfor%}
-    </ul>>
+    </ul>
 {%endblock%}
